--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -600,3 +600,85 @@ and the corresponding energies are
 \noindent\begin{equation*}
     E_n = \frac{\hbar^{2}}{2m} \frac{\pi^{2}}{a^{2}} \underbrace{\left(n_{x}^{2}+n_{y}^{2}+n_{z}^{2}\right)}_{n}
 \end{equation*}
+
+\section{Angular Momentum and Spin}
+\subsection{Angular Momentum}
+\subsubsection{Angular Momentum in QM}
+
+\ptitle{Operators}
+
+From classical mechanics we derive
+\begin{equation*}
+    \mathbf{L}=
+    \begin{pmatrix}
+        L_x \\
+        L_y \\
+        L_z
+    \end{pmatrix}
+    =\mathbf{r}\times\mathbf{p}
+    =
+    \begin{pmatrix}
+        yp_z-zp_y \\
+        zp_x-xp_z \\
+        xp_y-yp_x
+    \end{pmatrix}
+    =\frac{\hbar}{i}(\mathbf{r}\times\mathbf{\nabla})
+\end{equation*}
+with
+\begin{equation*}
+    |\mathbf{L}|=\sqrt{L_{x}^{2}+L_{y}^{2}+L_{z}^{2}}
+\end{equation*}
+
+\ptitle{Spherical Coordinates}
+
+using
+\begin{equation*}
+    \mathbf{L}=\frac{\hbar}{i}\Bigg(\mathbf{u}_{\phi}\frac{\partial}{\partial\theta}-\mathbf{u}_{\theta}\frac{1}{\sin\theta}\frac{\partial}{\partial\phi}\Bigg)
+\end{equation*}
+with
+\begin{equation*}
+    \mathbf{\nabla}=\mathbf{u}_{r}\frac{\partial}{\partial r}+\frac{\mathbf{u}_{\theta}}{r}\frac{\partial}{\partial\theta}+\frac{\mathbf{u}_{\phi}}{r\sin\theta}\frac{\partial}{\partial\phi}
+\end{equation*}
+and the \textbf{ladders}
+\begin{equation*}
+    \widehat{L_{\pm}}=\widehat{L_{x}}\pm i \widehat{L_y}
+\end{equation*}
+we get
+\begin{align*}
+    \widehat{L}_{z} & =\frac{\hbar}{i}\frac{\partial}{\partial\phi}                                                                                                                                        \\
+    \hat{L}^{2}     & =-\hbar^{2}\left[\frac{1}{\sin\theta}\frac{\partial}{\partial\theta}(\sin\theta\frac{\partial}{\partial\theta})+\frac{1}{\sin^{2}\theta}\frac{\partial^{2}}{\partial\phi^{2}}\right]
+\end{align*}
+Applying these operators to the eigenvalue equation we find that the equations become equivalent to the \textbf{angular equation} from the hydrogen atom.
+
+\ptitle{Remarks}
+
+\begin{itemize}
+    \item $L_x, L_y, L_z$ are incompatible
+    \item $\hat{L^2}$ and $L_x, L_y, L_z$ are compatible
+\end{itemize}
+
+\subsubsection{Eigenfunctions of Angular Momentum}
+As they are compatible (share eigenfunctions), we choose to find the eigenfunctions for $\hat{L^2}$ and $L_z$
+\begin{align*}
+    L^{2}f_{\ell}^{m_l} & =\hbar^{2}\ell (\ell+1) f_{\ell}^{m_l} \\
+    L_{z}f_{\ell}^{m_l} & =\hbar mf_{\ell}^{m_l}
+\end{align*}
+with quantum numbers
+\begin{align*}
+    \ell & =0, 1/2, 1, 3/2,\ldots                \\
+    m    & =-\ell, -\ell+1, \ldots, \ell-1, \ell
+\end{align*}
+and the orthogonal \textbf{eigenfunctions}
+\begin{equation*}
+    f_{\ell}^{m_l}=Y_{\ell}^{m_l}
+\end{equation*}
+
+\ptitle{Remarks}
+
+\begin{itemize}
+    \item For each $l$ we have $2l+1$ values for $m_l$
+    \item The eigenvalues are found by using the ladder method
+    \item $Y_{\ell}^{m_l}$ are eigenfunctions of hermitian operators ($\widehat{L^2}$, $\widehat{L}_{z}$) and have \textbf{different eigenvalues}. Therefore, they are \textbf{orthogonal}.
+\end{itemize}
+
+\subsection{Spin}
