--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -109,7 +109,7 @@ It is important to calculate $\widehat{A}\widehat{B}f - \widehat{B}\widehat{A}f$
     \left[\widehat{H}, \widehat{V}\right] & \neq 0                                                     \\
 \end{align*}
 
-\ptitle{Angular Momentum Commutators}
+\ptitle{Angular Momentum Commutators}\label{comm_am_sp}
 
 \begin{align*}
     \left[\widehat{L_{x}},\widehat{L_{y}}\right] & =i\hbar \widehat{L_{z}}                                                                           \\
