uncertainty relation between position and momentum added

--- a/src/sections/midterm.tex
+++ b/src/sections/midterm.tex
@@ -242,6 +242,11 @@ For any Observables $A$, $B$:
     \sigma_A^2\cdot\sigma_B^2\geqslant{\underbrace{\left(\frac1{2i}\langle[\hat{A},\hat{B}]\rangle\right)}_{\textsf{real}}}^2
 \end{equation*}
 
+Therefore the position and momentum operator yield the following uncertainty relation:
+\begin{equation*}
+    \sigma_x\sigma_p \geq \frac{\hbar}{2}
+\end{equation*}
+
 \subsubsection{Time-Energy Uncertainty}
 Plugging the \textbf{generalized Ehrenfest theorem}
 \begin{equation*}
