raising and lowering operator combinations extended

--- a/src/sections/midterm.tex
+++ b/src/sections/midterm.tex
@@ -429,8 +429,12 @@ A wavepacket consisting of infinitely many waves has a different \textit{group v
     \psi_n & = \frac{1}{\sqrt{n!}}{\left(\widehat{a}_{+}\right)}^n \psi_0                                       & E_n & = (n+\frac{1}{2})\hbar\omega
 \end{align*}
 \begin{align*}
-    \widehat{a}_{+}\psi_n & = \sqrt{n+1}\psi_{n+1} \\
-    \widehat{a}_{-}\psi_n & = \sqrt{n}\psi_{n-1}
+    \widehat{a}_{+}\psi_n                & = \sqrt{n+1}\:\psi_{n+1}                           \\
+    \widehat{a}_{-}\psi_n                & = \sqrt{n}\:\psi_{n-1}                             \\
+    \widehat{a}_{+}\widehat{a}_{+}\psi_n & = \sqrt{n+1}\sqrt{n+2}\:\psi_{n+2}                 \\
+    \widehat{a}_{-}\widehat{a}_{-}\psi_n & = \sqrt{n-1}\sqrt{n}\:\psi_{n-2}                   \\
+    \widehat{a}_{+}\widehat{a}_{-}\psi_n & = \sqrt{n}\sqrt{n}\:\psi_{n} = n \:\psi_{n}        \\
+    \widehat{a}_{-}\widehat{a}_{+}\psi_n & = \sqrt{n+1}\sqrt{n+1}\:\psi_{n} = (n+1)\:\psi_{n}
 \end{align*}
 
 \begin{center}
