made hermite polynomial form more readable

--- a/src/sections/midterm.tex
+++ b/src/sections/midterm.tex
@@ -443,14 +443,11 @@ A wavepacket consisting of infinitely many waves has a different \textit{group v
 
 \ptitle{Hermite Polynomial Form} (\textit{Useful Info Sheet})
 
-{\tiny\noindent\begin{align*}
-        H_1 & = 2x                                         &  & \text{odd}  \\
-        H_2 & = 4x^2-2                                     &  & \text{even} \\
-        H_3 & = 8x^3-12x                                   &  & \text{odd}  \\
-        H_4 & = 16x^4-48x^2+12                             &  & \text{even} \\
-        H_n & = {(-1)}^n e^{x^2} \frac{d^n}{dx^n} e^{-x^2}
-    \end{align*}
-}
+\noindent\begin{align*}
+    H_n & = {(-1)}^n e^{x^2} \frac{d^n}{dx^n} e^{-x^2}                                           \\
+    H_1 & = 2x                                         & H_3 & = 8x^3-12x       &  & \text{odd}  \\
+    H_2 & = 4x^2-2                                     & H_4 & = 16x^4-48x^2+12 &  & \text{even}
+\end{align*}
 
 \ptitle{Remarks:}
 \begin{itemize}
