--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -634,7 +634,7 @@ with
 \begin{itemize}
     \item $\widehat{L_x}, \widehat{L_y}, \widehat{L_z}$ are incompatible
     \item $\hat{L^2}$ and $\widehat{L_x}, \widehat{L_y}, \widehat{L_z}$ are compatible
-    \item Various angular momentum commutators can be found in the appendix: ~\ref{comm_am}
+    \item Various angular momentum commutators can be found in the appendix:\ \ref{comm}
 \end{itemize}
 
 \subsubsection{Ladder Operators for Angular Momentum}
@@ -661,7 +661,7 @@ and the orthogonal \textbf{eigenfunctions}
 \begin{equation*}
     f_{\ell}^{m_l}=Y_{\ell}^{m_l}
 \end{equation*}
-i.e. the spherical harmonics.
+i.e.\ the spherical harmonics.
 
 \ptitle{Remarks}
 
@@ -709,11 +709,11 @@ Given a certain $l$, angular momentum can be described by a cone for each $m_l$
 \end{center}
 
 \subsection{Spin}
-Similar to the earth having an angular momentum w.r.t. the sun but also itself, an electron has an angular momentum w.r.t. the nucleus and itself.
+Similar to the earth having an angular momentum w.r.t.\ the sun but also itself, an electron has an angular momentum w.r.t.\ the nucleus and itself.
 
 \ptitle{Operators}
 
-$\hat{\mathbf{S}}$ follows the same rules as $\hat{\mathbf{L}}$ (see appendix ~\ref{comm_am_sp})
+$\hat{\mathbf{S}}$ follows the same rules as $\hat{\mathbf{L}}$ (see appendix\ \ref{comm_am_sp})
 
 \ptitle{Remarks}
 
@@ -728,14 +728,14 @@ $\hat{\mathbf{S}}$ follows the same rules as $\hat{\mathbf{L}}$ (see appendix ~\
 For a QM particle (not necessarily an electron) with spin one has
 \begin{align*}
     \widehat{S^2}f_{s}^{m_s}   & =\hbar^{2}s (s+1) f_{s}^{m_s} \\
-    \widehat{S_{z}}f_{s}^{m_s} & =\hbar m_sf_{s}^{m_s}
+    \widehat{S_{z}}f_{s}^{m_s} & =\hbar m_s f_{s}^{m_s}
 \end{align*}
 where
 \begin{align*}
     s   & =0,\frac{1}{2},1,\frac{3}{2},\dots \\
     m_s & =-s, -s+1,\dots, s-1, s
 \end{align*}
-i.e. angular momenta are restricted to integer and half-integer values.
+i.e.\ angular momenta are restricted to integer and half-integer values.
 
 \ptitle{Set Value for $\mathbf{s}$}
 
@@ -817,7 +817,7 @@ Defining spin up and spin down \textbf{relative to z-axis} we get (by solving ei
 
 Note that
 \begin{itemize}
-    \item $\hat{S}_{x}$, $\hat{S}_{y}$ are non-diagonal i.e. the basis vectors are not eigenvectors of these operators.
+    \item $\hat{S}_{x}$, $\hat{S}_{y}$ are non-diagonal i.e.\ the basis vectors are not eigenvectors of these operators.
     \item If they were diagonal in z-basis, $\hat{S}_{x},\hat{S}_{y},\hat{S}_{z}$ would have the same eigenvectors (but is not the case as they are incompatible).
 \end{itemize}
 
