--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -91,32 +91,28 @@ It is important to calculate $\widehat{A}\widehat{B}f - \widehat{B}\widehat{A}f$
 
 \noindent\begin{align*}
     \left[c,\hat B\right]                        & =0  \\
-    \left[\widehat{a}_{-},\widehat{a}_{+}\right] & = 1 \\
+    \left[\widehat{a}_{-},\widehat{a}_{+}\right] & = 1
 \end{align*}
 
 \ptitle{Momentum Commutators}
-
-\begin{align*}
+\noindent\begin{align*}
     \left[\widehat{x}^n,\widehat{p}\right]  & = i \hbar n x^{n-1}    \\
     \left[\widehat{x},\widehat{p}^2\right]  & = 2i\hbar\widehat{p}   \\
-    \left[f(\widehat{x}),\widehat{p}\right] & = i \hbar\frac{df}{dx} \\
+    \left[f(\widehat{x}),\widehat{p}\right] & = i \hbar\frac{df}{dx}
 \end{align*}
 
 \ptitle{Energy Commutators}
-\begin{align*}
+\noindent\begin{align*}
     \left[\widehat{V},\widehat{x}\right]  & =0                            &  & \text{Potential energy} \\
     \left[\widehat{H},\widehat{x}\right]  & =-\frac{i\hbar}{m}\widehat{p} &  & \text{Total energy}     \\
-    \left[\widehat{H}, \widehat{V}\right] & \neq 0                                                     \\
+    \left[\widehat{H}, \widehat{V}\right] & \neq 0
 \end{align*}
 
 \ptitle{Angular Momentum Commutators}\label{comm_am_sp}
-
-\begin{align*}
-    \left[\widehat{L_{x}},\widehat{L_{y}}\right] & =i\hbar \widehat{L_{z}}                                                                           \\
-    \left[\widehat{L_{y}},\widehat{L_{z}}\right] & =i\hbar \widehat{L_{x}}                                                                           \\
-    \left[\widehat{L_{z}},\widehat{L_{x}}\right] & =i\hbar \widehat{L_{y}}                                                                           \\
-    \left[\widehat{L^{2}},\widehat{L_{x}}\right] & = \left[\widehat{L^{2}},\widehat{L_{y}}\right] = \left[\widehat{L^{2}},\widehat{L_{z}}\right] = 0
-\end{align*}
+\noindent\begin{gather*}
+    \left[\widehat{L}_{x},\widehat{L}_{y}\right] =i\hbar \widehat{L}_{z}, \qquad \left[\widehat{L}_{y},\widehat{L}_{z}\right]  =i\hbar \widehat{L}_{x}, \qquad \left[\widehat{L}_{z},\widehat{L}_{x}\right]  =i\hbar \widehat{L}_{y}      \\
+    \left[\widehat{L}^{2},\widehat{L}_{x}\right] = \left[\widehat{L}^{2},\widehat{L}_{y}\right] = \left[\widehat{L}^{2},\widehat{L}_{z}\right] = 0
+\end{gather*}
 
 \subsection{Inner Product}\label{ssec:InnerProd}
 \ptitle{Properties}
